# libancillary

./: .gitignore  .travis.yml  Makefile.am  Makefile.in  config.h.in  configure  configure.ac  fd_send.c
src/: Makefile.am  Makefile.in  fd_recv.c
test/: .gitignore  Makefile.am  Makefile.in  test.c
